client/src/app/pages/competitors/competitors.component.css
.table-container {
    height: 550px;
    overflow: auto;
    text-align: left;
    min-width: 800px;
  }
  
  table {
    width: 100%;
  }
  .legend{
    margin-top: 15px;
      text-align: left;
      font-size: 16px;
  }
  .full{
    margin:20px 2% 5% 2%;;
  }


  .mat-header-cell{
    font-size: calc(18px + (25 - 14) * ((100vw - 300px) / (1600 - 300)));
  }

  .banner{
    margin : 0 0 0 0;
    width : 100%;
}
.mat-cell {
  padding: 0 8px 0 8px;
}

